--- a/Table.html
+++ b/Table.html
@@ -16,6 +16,7 @@
         th {
             border: 2px solid lightgray;
             padding: 0 20px;
+            font-size: 30px;
         }
     </style>
 </head>
