--- a/Home.html
+++ b/Home.html
@@ -13,7 +13,15 @@
     <header>
         <nav>
             <ul>
-                <li><a href="Home.html">Home</a></li>
+                <li class="hover"><a href="Home.html">Home </a>
+                    <ul class="dropdown">
+                        <li><a href="">list-1</a></li>
+                        <li><a href="">list-2</a></li>
+                        <li><a href="">list-3</a></li>
+                        <li><a href="">list-4</a></li>
+                        <li><a href="">list-5</a></li>
+                    </ul>
+                </li>
                 <li><a href="Form.html">Form</a></li>
                 <li><a href="Semantic.html">Semantic</a></li>
                 <li><a href="Table.html">Table</a></li>
