--- a/visibility.html
+++ b/visibility.html
@@ -8,9 +8,9 @@
     <title>Visibility</title>
     <style>
         .box {
+            margin: 10px;
             height: 200px;
-            width: 200px;
-            border: 1px solid salmon;
+            border: 10px dotted salmon;
         }
 
         #box-1 {
@@ -19,6 +19,7 @@
 
         #box-2 {
             background-color: green;
+            display: none;
         }
 
         #box-3 {
